! [Bug 4769] Unnecessary & depreciated align="middle" attribute in img markup.  Replaced this with a new css style centericon
Themes/default/Display.template.php
Themes/default/Memberlist.template.php
Themes/default/MessageIndex.template.php
Themes/default/Packages.template.php
Themes/default/Recent.template.php
Themes/default/css/index.css

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -3166,7 +3166,10 @@ div#profile_success
 	margin: 0 0 10px 2px;
 	overflow: auto;
 }
-
+img.centericon
+{
+	vertical-align: middle;
+}
 .ignoreboards
 {
 	margin: 0 2%;
